[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/ui/reset.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/players/TopdownPlayer.gd" type="Script" id=2]
[ext_resource path="res://scenes/characters/players/TopdownPlayerStates.gd" type="Script" id=3]
[ext_resource path="res://assets/characters/mc/mc_dash.png" type="Texture" id=4]
[ext_resource path="res://assets/characters/mc/mc_idle.png" type="Texture" id=5]
[ext_resource path="res://assets/characters/mc/mc_walking.png" type="Texture" id=6]
[ext_resource path="res://utils/MultiAudioPlayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sfx/combat/player_dash_4.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sfx/combat/player_dash_1.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sfx/combat/player_dash_3.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sfx/combat/player_dash_2.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sfx/combat/player_hurt_3.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sfx/combat/player_hurt_2.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sfx/combat/player_hurt_1.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sfx/combat/player_hurt_4.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sfx/combat/enemy_eat_3.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sfx/combat/enemy_eat_2.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/sfx/combat/enemy_eat_1.wav" type="AudioStream" id=18]
[ext_resource path="res://scenes/characters/players/DashLine.tscn" type="PackedScene" id=19]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": false,
"name": "dash",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 3 )

[sub_resource type="AudioStreamRandomPitch" id=3]
resource_local_to_scene = true

[node name="TopdownPlayer" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="TopdownPlayerStates" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Pivot" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Pivot"]
position = Vector2( 3, -31 )
frames = SubResource( 1 )
animation = "idle"
frame = 4
speed_scale = 1.5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DashLine" parent="." instance=ExtResource( 19 )]

[node name="DashSFX" parent="." instance=ExtResource( 7 )]
stream = SubResource( 3 )
audio_streams = [ ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 8 ) ]

[node name="HurtSFX" parent="." instance=ExtResource( 7 )]
stream = SubResource( 3 )
audio_streams = [ ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 15 ) ]

[node name="EatSFX" parent="." instance=ExtResource( 7 )]
stream = SubResource( 3 )
audio_streams = [ ExtResource( 18 ), ExtResource( 17 ), ExtResource( 16 ) ]

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
